--- a/WebDev Projects/mobiltelefonok_peterteszary/kapcsolat.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/kapcsolat.html
@@ -1,112 +1,126 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css.map" />
-    <link rel="stylesheet" href="css/mobilstyle.css" />
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <title>Mobilhálózatok fejlődése</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/mobilstyle.css" />
+</head>
 
-    <title>Mobiltelefonok</title>
-    <nav id="header-section"></nav>
-  </head>
-  <body>
-    
+<body>
+    <nav id="header"></nav>
 
-    
-<!-- form -->
-    <div class="container mt-5 bg-dark">
+    <section id="hero" class="hero bg-dark text-white py-5"
+        style="background-image: url('../images/mobile-hero.jpg'); background-size: cover; position: relative;">
+        <div class="px-4 py-5 my-5 text-center">
+            <img class="d-block mx-auto mb-4" src="../images/phone-call.png" alt="" width="57" height="57" />
+            <h1 class="display-5 fw-bold text-body-emphasis text-uppercase">
+                Kapcsolat
+            </h1>
+        </div>
+    </section>
+
+    <div class="container-fluid p-5 bg-dark">
         <div class="row justify-content-center">
-          <div class="col-md-6">
-            <form class="needs-validation" novalidate>
-                <div class="mb-3">
-                  <label for="vezeteknev" class="form-label">Vezetéknév</label>
-                  <input type="text" class="form-control" id="vezeteknev" name="vezeteknev" required>
-                  <div class="invalid-feedback">
-                    Kérjük, adja meg a vezetéknevét!
-                  </div>
-                </div>
-                <div class="mb-3">
-                  <label for="keresztnev" class="form-label">Keresztnév</label>
-                  <input type="text" class="form-control" id="keresztnev" name="keresztnev" required>
-                  <div class="invalid-feedback">
-                    Kérjük, adja meg a keresztnevét!
-                  </div>
-                </div>
-                <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" name="email" required>
-                  <div class="invalid-feedback">
-                    Kérjük, adjon meg egy érvényes email címet!
-                  </div>
-                </div>
-                <div class="mb-3">
-                  <label for="telefonszam" class="form-label">Telefonszám</label>
-                  <input type="tel" class="form-control" id="telefonszam" name="telefonszam" required>
-                  <div class="invalid-feedback">
-                    Kérjük, adja meg a telefonszámát!
-                  </div>
-                </div>
-                <div class="mb-3">
-                  <label for="megjegyzes" class="form-label">Megjegyzés</label>
-                  <textarea class="form-control" id="megjegyzes" name="megjegyzes" rows="4"></textarea>
-                </div>
-                <div class="mb-3">
-                  <label for="szint" class="form-label">Szint</label>
-                  <select class="form-control" id="szint" name="szint">
-                    <option value="regi">Régi</option>
-                    <option value="kozepes">Közepes</option>
-                    <option value="uj">Új</option>
-                  </select>
-                </div>
-                <button type="submit" class="btn btn-primary">Küldés</button>
-              </form>
-              <!-- form vége -->
+            <div class="col-md-6">
+                <form class="needs-validation" novalidate>
+                    <div class="mb-3">
+                        <label for="vezeteknev" class="form-label">Vezetéknév</label>
+                        <input type="text" class="form-control" id="vezeteknev" name="vezeteknev" required>
+                        <div class="invalid-feedback">
+                            Kérjük, adja meg a vezetéknevét!
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="keresztnev" class="form-label">Keresztnév</label>
+                        <input type="text" class="form-control" id="keresztnev" name="keresztnev" required>
+                        <div class="invalid-feedback">
+                            Kérjük, adja meg a keresztnevét!
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                        <div class="invalid-feedback">
+                            Kérjük, adjon meg egy érvényes email címet!
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="telefonszam" class="form-label">Telefonszám</label>
+                        <input type="tel" class="form-control" id="telefonszam" name="telefonszam" required>
+                        <div class="invalid-feedback">
+                            Kérjük, adja meg a telefonszámát!
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="megjegyzes" class="form-label">Megjegyzés</label>
+                        <textarea class="form-control" id="megjegyzes" name="megjegyzes" rows="4"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="szint" class="form-label">Melyik készülékkel kapcsolatban érdeklődik?</label>
+                        <select class="form-control" id="szint" name="szint">
+                            <option value="egyik_sem">Egyik sem...</option>
+                            <option value="nokia_3310">Nokia 3310</option>
+                            <option value="blackberry_8520">BlackBerry 8520</option>
+                            <option value="motorola_startac">Motorola Startac</option>
+                            <option value="iphone_4s">iPhone 4s</option>
+                            <option value="sony_ericcson_xperia_pro">Sony Ericsson Xperia Pro</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-secondary">Küldés</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
+    <footer id="footer"></footer>
+
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+
+    <script src="js/header.js"></script>
+    <script src="js/footer.js"></script>
+
+    <script>
+        loadHeader();
+        loadFooter();
+
+        const form = document.querySelector('form');
+        form.addEventListener('submit', (event) => {
+            event.preventDefault();
+            if (form.checkValidity() === false) {
+                event.stopPropagation();
+            } else {
+                const formData = new FormData(form);
+                const jsonData = JSON.stringify(Object.fromEntries(formData.entries()));
+                console.log(jsonData);
+                fetch('https://example.com/api/formdata', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: jsonData
+                }).then(response => {
+                    if (response.ok) {
+                        window.location.href = 'koszono.html';
+                    } else {
+                        throw new Error('Hiba történt az űrlap elküldése közben!');
+                    }
+                }).catch(error => {
+                    console.error(error);
+                    alert(error.message);
+                });
+            }
+            form.classList.add('was-validated');
+        });
+    </script>
 </body>
 
-   
-  <script src="js/header.js"></script>
-  <script src="js/footer.js"></script>
-
- <!--form küldése -->
-  <script>
-    const form = document.querySelector('form');
-    form.addEventListener('submit', (event) => {
-      event.preventDefault();
-      if (form.checkValidity() === false) {
-        event.stopPropagation();
-      } else {
-        const formData = new FormData(form);
-        const jsonData = JSON.stringify(Object.fromEntries(formData.entries()));
-        console.log(jsonData);
-        // elküldi az űrlapot az átirányítási linken keresztül
-        fetch('https://example.com/api/formdata', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: jsonData
-        }).then(response => {
-          if (response.ok) {
-            // átirányít a köszönő oldalra, ha az űrlap sikeresen elküldve
-            window.location.href = 'koszono.html';
-          } else {
-            // ha valami hiba történik, megjelenít egy hibaüzenetet
-            throw new Error('Hiba történt az űrlap elküldése közben!');
-          }
-        }).catch(error => {
-          console.error(error);
-          alert(error.message);
-        });
-      }
-      form.classList.add('was-validated');
-    });
-  </script>
-  
-
-  <footer id="footer"></footer>
 </html>
