--- a/WebDev Projects/mobiltelefonok_peterteszary/mobiltortenelem.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/mobiltortenelem.html
@@ -1,27 +1,168 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css.map" />
-    <link rel="stylesheet" href="css/mobilstyle.css" />
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <title>Mobiltelefonok</title>
-    <nav id="header-section"></nav>
-  </head>
-  <body>
-    
-  </body>
+    <link rel="stylesheet" href="../css/mobilstyle.css" />
+    <title>iPhone 4s</title>
 
-  <div class="container bg-black">
-    <div class="row" height="50%"></div>
+   
+</head>
+
+<body>
+    <nav id="header"></nav>
+
+    <!-- Fejléc szekció -->
+
+    <section id="hero" class="hero bg-dark text-white py-5"
+        style="background-image: url('../images/mobile-hero.jpg'); background-size: cover; position: relative;">
+        <div class="px-4 py-5 my-5 text-center">
+            <img class="d-block mx-auto mb-4" src="../images/phone-call.png" alt="" width="57" height="57" />
+            <h1 class="display-5 fw-bold text-body-emphasis text-uppercase">
+              Mobiltelefonok története
+            </h1>
+        </div>
+    </section>
+    <!-- Heros Section End -->
+<body class="bg-dark">
+  <div class="container py-5">
+    <h1 class="text-center mb-5">Korszakok</h1>
+    <table class="table table-dark">
+      <thead>
+        <tr>
+          <th>Időszak</th>
+          <th>Leírás</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1940-1980</td>
+          <td>A kezdetek</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <p>
+            A mobiltelefonok története izgalmas és lenyűgöző fejlődésen ment keresztül az 1940-es évektől egészen az 1980-as évekig. Ez az időszak jelentős mérföldköveket és technológiai áttöréseket hozott, amelyek forradalmasították a kommunikációt és a mobilitást. Engedd meg, hogy elmeséljem ezt a történetet részletesebben.</p>
+            
+            <p>
+            Az 1940-es években a mobiltelefonok még távoli jövőképnek tűntek. Az akkori időkben a vezetékes telefonok voltak az uralkodó kommunikációs eszközök, és a hordozható készülékek még nem voltak elterjedtek. Azonban a második világháború során a hadsereg szükségletei hozzájárultak néhány korai mobilkommunikációs rendszer fejlesztéséhez. Például a haditengerészet kifejlesztett olyan rendszereket, amelyek lehetővé tették a hajók és a szárazföldi bázisok közötti kommunikációt.</p>
+            <p>
+            Az 1950-es években megkezdődött az igazi változás a mobiltelefonok terén. Az autós telefontelefonok megjelenése forradalmasította a kommunikációt az úton. Ezek az eszközök az autókba építették be őket, és lehetővé tették az autósok számára, hogy hívást indítsanak vagy fogadjanak bármilyen helyszínről. Az autós telefontelefonok azonban nehézek és drágák voltak, és csak kevesek számára voltak elérhetőek.
+            </p>
+            <p>
+            Az 1960-as években a mobiltelefonok mérete csökkent, és egyre jobban hordozhatóvá váltak. A fejlesztéseknek köszönhetően az első valódi kézi mobiltelefonok megjelentek. Az 1960-as évek végén a svéd L.M. Ericsson bemutatta az MTA (Mobile Telephone System A) rendszert, amely lehetővé tette a mobiltelefonhálózathoz való csatlakozást. Az MTA rendszerben a felhasználók egymással és a vezetékes telefonokkal is kommunikálhattak.
+            </p>
+            <p>
+            Az 1970-es években a mobiltelefonok további fejlődésen mentek keresztül. A Motorola cég bevezette az első valóban kézi mobiltelefont, a Motorola DynaTAC-ot. Ez a készülék már kifejezetten a fogyasztók számára volt tervezve, bár az ára még mindig elég magas volt. A DynaTAC hatalmas volt és csak hanghívásokat támogatott, de meghatározó lépést jelentett a mobiltelefonok terén.
+            </p>
+            <p>
+            Az 1980-as évek elején jelentős áttörés történt a mobiltelefonok terén. Az analóg mobiltelefonhálózatok megjelentek, és lehetővé tették a mobilkommunikációt szélesebb körben. Az 1983-ban az Amerikai Egyesült Államokban bevezetett Advanced Mobile Phone System (AMPS) volt az első nagyobb léptékű analóg mobiltelefon-hálózat. Ez az új technológia hozzáférést biztosított a mobiltelefonokhoz a nagyközönség számára, és lehetővé tette a szélesebb körű mobilkommunikációt.
+            </p>
+            <p>
+            Az 1980-as évek közepére a mobiltelefonok már kezdtek elterjedni. Az új modellek kisebbek és könnyebbek lettek, valamint új funkciókkal gazdagodtak, mint például a telefonkönyv vagy a tárcsázás memóriával. Az árak is elkezdtek csökkenni, így a mobiltelefonok elérhetőbbé váltak a nagyközönség számára.
+            </p>
+            <p>
+            Az 1980-as évek végére az analóg mobiltelefonokat már digitális technológia váltotta fel. Az első digitális mobiltelefon-hálózatok megjelentek, és további fejlődést hoztak a hordozható kommunikáció terén. Az új digitális rendszerek lehetővé tették a jobb hangminőséget, nagyobb megbízhatóságot és hatékonyságot.
+            </p>
+            <p>
+            Összességében az 1940-1980 közötti időszakban a mobiltelefonok elképesztő fejlődésen mentek keresztül. Az autós telefontelefonoktól kezdve a kézi mobiltelefonok megjelenéséig, valamint az analóg és digitális hálózatok fejlesztéséig ez az időszak megalapozta a modern mobilkommunikáció alapjait. Az 1980-as évek végén a mobiltelefonok már egyre elterjedtebbek voltak, és a következő évtizedekben további innovációk és technológiai fejlődések vártak rájuk.
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td>1980-2000</td>
+          <td>Az aranykor</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <p>
+            Az 1980-as és 2000-es évek közötti időszak a mobiltelefonok terén további lenyűgöző fejlődést és átalakulást hozott. Ebben az időszakban a mobiltechnológia folyamatosan fejlődött, a készülékek kisebbek és sokoldalúbbak lettek, és a mobilkommunikáció teljesen átformálta a mindennapi életet.
+            </p>
+            <p>
+            Az 1980-as évek elején a mobiltelefonok továbbra is főként analóg technológiát használtak. Azonban az 1980-as évek közepén jelentős változás történt a mobilkommunikáció terén az analóg rendszerek helyett a digitális hálózatok felé. Az első digitális mobiltelefon-hálózatok megjelentek, és ezáltal javult a hangminőség, valamint a kapcsolat megbízhatósága és hatékonysága.
+            </p>
+            <p>
+            A 1990-es években a mobiltelefonok nagyobb népszerűségre tettek szert. Az új technológiai fejlesztések lehetővé tették a kisebb méretű és könnyebb készülékek megjelenését. Ebben az időszakban megjelentek az első hajtogatható készülékek, amelyek lehetővé tették, hogy a felhasználók könnyedén zsebre tehesse vagy táskájában hordja a telefonjukat.
+            </p>
+            <p>
+            Az 1990-es évek közepétől kezdve azonban a mobiltelefonok nem csupán telefonálásra szolgáltak. Egyre több funkcióval gazdagodtak, mint például az SMS (rövid üzenetküldés) lehetősége, amely forradalmasította a szöveges kommunikációt. Emellett megjelentek az első játékok, naptárak, számológépek és más hasznos alkalmazások, amelyek még inkább növelték a mobiltelefonok értékét és sokoldalúságát.
+            </p>
+            <p>
+            Az 1990-es évek végére azonban a mobiltelefonok még nagyobb áttörést értek el. Az úgynevezett "kézi zsebszámítógépek" vagy okostelefonok kezdtek megjelenni a piacon. Ezek a készülékek többfunkciósak voltak, és lehetővé tették az internet-hozzáférést, az e-mail küldését, a multimédiás tartalmak lejátszását és még sok más tevékenységet. Az okostelefonok teljesen új dimenziót nyitottak a mobilkommunikációban és a személyes számítástechnikában.
+            </p>
+            <p>
+            Az 1980-as és 2000-es évek közötti időszakot a mobiltelefonok robbanásszerű elterjedése jellemezte. Az árak csökkentek, az elérhetőség nőtt, és a mobiltelefonok az életünk szerves részévé váltak. Az emberek nemcsak üzleti célokra használták őket, hanem szórakozásra, szociális kapcsolatok fenntartására és az információhoz való hozzáférésre is.
+            </p>
+            <p>
+            Összességében az 1980-as és 2000-es évek közötti időszakban a mobiltelefonok hihetetlen fejlődésen mentek keresztül. Az analóg hálózatokról a digitális technológiára való átállás, a kisebb és sokoldalúbb készülékek megjelenése és az okostelefonok korszaka a mobilkommunikáció forradalmát hozta el. Ezek az innovációk alapozták meg az utat a modern mobiltelefonok és az egyre fejlettebb mobilalkalmazások felé, amelyek ma már nélkülözhetetlenek az életünkben.
+            </p>
+        </td>
+        </tr>
+        <tr>
+          <td>2000-2020</td>
+          <td>Napjainkban</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <p>
+            Az 2000 és 2020 közötti időszak a mobiltelefonok történetében további jelentős áttöréseket és innovációkat hozott. Ez az időszak a digitális forradalom korát jelentette, amely a mobiltechnológia terén is forradalmi változásokat hozott.
+            </p>
+            <p>
+            Az 2000-es évek elején az okostelefonok fokozatosan terjedtek el. Az új generációs mobilkészülékek lehetővé tették az internetes böngészést, az e-mailt, a multimédiás tartalmak lejátszását és az alkalmazások futtatását. Az okostelefonok az életünk központi eszközeivé váltak, mind üzleti, mind szórakoztató célokra. A mobilalkalmazások terjedése elindult, és számos olyan alkalmazás jelent meg, amelyek megkönnyítették a mindennapi tevékenységeket, mint például az üzenetküldő alkalmazások, a közösségi média platformok vagy a navigációs rendszerek.
+            </p>
+            <p>
+            Az 2000-es évek közepén megjelentek az első érintőképernyős telefonok, amelyek új szintre emelték a felhasználói élményt. Az érintőképernyős technológia lehetővé tette a felhasználók számára, hogy intuitív módon navigáljanak az eszközökön, és új lehetőségeket nyújtott az alkalmazások és szolgáltatások terén.
+            </p>
+            <p>
+            A mobiltelefonok kamerái is jelentős fejlődésen mentek keresztül ebben az időszakban. Az 2000-es évek elején még alacsony felbontású kamerákkal rendelkező telefonok voltak elterjedtek, de az évtized végére a mobiltelefonok kamerái olyan szintre fejlődtek, hogy képek és videók magas minőségben rögzíthetők voltak velük. Ez meghatározó szerepet játszott a digitális fényképezés és a videómegosztás terén.
+            </p>
+            <p>
+            Az 2000-es évek végén a mobiltelefonok még inkább összekapcsolódtak az internet világával. A mobilinternet elterjedése lehetővé tette a böngészést, az online vásárlást és az alkalmazások letöltését a telefonokon keresztül. A gyorsabb adatkapcsolatok és a mobilhálózatok fejlesztése tovább erősítette a mobilkommunikáció és az online tartalom elérésének lehetőségét.
+            </p>
+            <p>
+            Az 2000-es évek végére és a 2010-es évek elejére az okostelefonok már általánosan elfogadottá váltak, és az emberek szinte mindenütt és mindenkor használták őket. Az alkalmazások kiterjedt kínálata, az online közösségi platformok és a mobilfizetési megoldások jelentős hatással voltak a mindennapi életünkre.
+            </p>
+            <p>
+            Az 2010-es évek további fejlesztéseket hoztak az okostelefonok terén. A telefonok gyorsabb processzorokkal, nagyobb kijelzőkkel és jobb kamerákkal rendelkeztek. Az újabb generációs mobilhálózatok, mint a 4G és a 5G, még gyorsabb adatkapcsolatokat biztosítottak, lehetővé téve a folyamatos streaminget, a felhőalapú tárolást és az élő közvetítéseket.
+            </p>
+            <p>
+            Az 2000 és 2020 közötti időszakban a mobiltelefonok radikálisan átalakították az életünket. A kommunikáció, az információhoz való hozzáférés, az online tartalomfogyasztás, az üzleti tevékenységek és a szórakoztatás terén forradalmi változásokat hoztak. A mobiltechnológia egyre inkább összefonódott az életünk minden területével, és állandó társainkká váltak.
+            </p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-  <script src="js/header.js"></script>
-  <script src="js/footer.js"></script>
+</body>
+</html>
+
+
+
 
   <footer id="footer"></footer>
+  <script src="js/footer.js"></script>
+  <script>
+    loadFooter();
+  </script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+
+  <script src="js/header.js"></script>
+  <script>
+    loadHeader();
+  </script>
+</body>
+
 </html>
