--- a/WebDev Projects/mobiltelefonok_peterteszary/sections/hero.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/sections/hero.html
@@ -3,7 +3,7 @@
  <section id="hero"
  class="hero bg-dark text-white py-5"
  style="
-   background-image: url('images/mobile-hero.jpg');
+   background-image: url('../images/mobile-hero.jpg');
    background-size: cover;
    position: relative;
  "
@@ -11,7 +11,7 @@
  <div class="px-4 py-5 my-5 text-center">
    <img
      class="d-block mx-auto mb-4"
-     src="images/phone-call.png"
+     src="../images/phone-call.png"
      alt=""
      width="57"
      height="57"
@@ -26,14 +26,13 @@
        segítségével áttekintheti a mobilkommunikáció fontos korszakait és
        állomásait. Jó utazást kívánunk!
      </p>
-     <div class="d-grid gap-4 d-sm-flex justify-content-sm-center">
-       <button type="button" class="btn btn-primary btn-lg px-4 gap-3">
-         Mobiltörténelem
-       </button>
-       <button type="button" class="btn btn-outline-secondary btn-lg px-4">
-         Kapcsolat
-       </button>
-     </div>
+     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+      <button type="button" class="btn btn--accent pulse btn-lg px-4 gap-3">
+        Mobiltörténelem
+      </button>
+
+    </div>
+    
    </div>
  </div>
 </section>
