--- a/WebDev Projects/mobiltelefonok_peterteszary/index.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/bootstrap.min.css.map" />
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/mobilstyle.css" />
   <title>Mobiltelefonok</title>
 </head>
@@ -20,11 +21,14 @@
     loadSections();
   </script>
 
-  <div id="cards"></div>
-  <script src="js/sections.js"></script>
-  <script>
-    loadSections();
-  </script>
+
+
+<div id="devices"></div>
+<script src="js/sections.js"></script>
+<script>
+  loadSections();
+</script>
+
 
 <div id="cards-second"></div>
 <script src="js/sections.js"></script>
@@ -32,11 +36,6 @@
   loadSections();
 </script>
 
-<div id="cards-third"></div>
-<script src="js/sections.js"></script>
-<script>
-  loadSections();
-</script>
 
   <footer id="footer"></footer>
   <script src="js/footer.js"></script>
@@ -45,7 +44,10 @@
   </script>
 
 
-  <script src="js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+
   <script src="js/header.js"></script>
   <script>
     loadHeader();
