--- a/WebDev Projects/mobiltelefonok_peterteszary/main-elements/header.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/main-elements/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="../index.html">MOBILEUM</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -15,11 +15,20 @@
         <li class="nav-item">
           <a class="nav-link" href="../halozatok.html">Hálózatok</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../keszulekek.html">Készülékek</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="devicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Készülékek
+          </a>
+          <div class="dropdown-menu" aria-labelledby="devicesDropdown">
+            <a class="dropdown-item" href="../telefonok/nokia3310.html">Nokia 3310</a>
+            <a class="dropdown-item" href="../telefonok/iphone-4s.html">iPhone 4s</a>
+            <a class="dropdown-item" href="../telefonok/blackberry-8520.html">BlackBerry 8520</a>
+            <a class="dropdown-item" href="../telefonok/motorola-startac.html">Motorola Startac</a>
+            <a class="dropdown-item" href="../telefonok/sony-ericsson-xperia-pro.html">Sony Ericsson Xperia Pro</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="btn btn-success" href="../kapcsolat.html">Kapcsolat</a>
+          <a class="nav-link" href="../kapcsolat.html">Kapcsolat</a>
         </li>
       </ul>
     </div>
