--- a/WebDev Projects/mobiltelefonok_peterteszary/halozatok.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/halozatok.html
@@ -33,17 +33,16 @@
     <body class="bg-dark">
         <div class="container py-5">
             <h1 class="text-center mb-5">Korszakok</h1>
-            <table class="table table-dark">
+            <table class="table text-light table-dark">
                 <thead>
                     <tr>
-                        <th>Időszak</th>
-                        <th>Leírás</th>
+                        <th class="h4 bg-ultra-dark">Időszak</th>
+                        <th class="h4 bg-ultra-dark">Leírás</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1G - 2G</td>
-                        <td>Az analóg hálózatok korszaka</td>
+                        <td class="h3 bg-ultra-dark" colspan="2">1G - 2G: Az analóg hálózatok korszaka</td>                        
                     </tr>
                     <tr>
                         <td></td>
@@ -53,8 +52,7 @@
                             javították a hangminőséget és lehetővé tették a szöveges üzenetküldést is.</td>
                     </tr>
                     <tr>
-                        <td>3G</td>
-                        <td>Az adatátvitel kezdete</td>
+                        <td class="h3 bg-ultra-dark" colspan="2">3G: Az adatátvitel kezdete</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -64,8 +62,7 @@
                             széles körű elterjedése a mobilinternet kialakulásának alapját jelentette.</td>
                     </tr>
                     <tr>
-                        <td>4G</td>
-                        <td>Az adatátvitel sebességének további növekedése</td>
+                        <td class="h3 bg-ultra-dark" colspan="2">4G: Az adatátvitel sebességének további növekedése</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -75,8 +72,7 @@
                             okostelefonok elterjedéséhez és a mobilalapú szolgáltatások fejlődéséhez.</td>
                     </tr>
                     <tr>
-                        <td>5G</td>
-                        <td>Az ultragyors internet és a hálózatok összekapcsolása</td>
+                        <td class="h3 bg-ultra-dark" colspan="2">5G: Az ultragyors internet és a hálózatok összekapcsolása</td>
                     </tr>
                     <tr>
                         <td></td>
