--- a/WebDev Projects/mobiltelefonok_peterteszary/sections/cards-second.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/sections/cards-second.html
@@ -5,11 +5,11 @@
       <div class="col">
         <div class="card bg-ultra-dark text-light mb-3 shadow--lg" style="max-width: 540px;">
           <div class="position-relative">
-            <a href="oldal.html">
+            <a href="../mobiltortenelem.html#kezdetek">
               <img src="images/mobil1940.jpg" class="card-img card-image-hover" alt="...">
             </a>
             <div class="card-img-overlay">
-              <a href="oldal.html" class="stretched-link"></a>
+              <a href="../mobiltortenelem.html#kezdetek" class="stretched-link"></a>
             </div>
           </div>
           <div class="row no-gutters">
@@ -18,7 +18,7 @@
                 <h5 class="card-title">1940-1980</h5>
                 <p class="card-text">A kezdetek</p>
                 <p class="card-text">
-                  <a href="oldal.html" class="btn btn--accent">Tovább</a>
+                  <a href="../mobiltortenelem.html#kezdetek" class="btn btn--accent">Tovább</a>
                 </p>
               </div>
             </div>
@@ -29,11 +29,11 @@
   <div class="col">
     <div class="card bg-ultra-dark text-light mb-3 shadow--lg" style="max-width: 540px;">
       <div class="position-relative">
-        <a href="oldal.html">
+        <a href="../mobiltortenelem.html#aranykor">
           <img src="images/mobil1992.jpg" class="card-img card-image-hover" alt="...">
         </a>
         <div class="card-img-overlay">
-          <a href="oldal.html" class="stretched-link"></a>
+          <a href="../mobiltortenelem.html#aranykor" class="stretched-link"></a>
         </div>
       </div>
       <div class="row no-gutters">
@@ -42,7 +42,7 @@
             <h5 class="card-title">1980-2000</h5>
             <p class="card-text">Az aranykor</p>
             <p class="card-text">
-              <a href="oldal.html" class="btn btn--accent">Tovább</a>
+              <a href="../mobiltortenelem.html#aranykor" class="btn btn--accent">Tovább</a>
             </p>
           </div>
         </div>
@@ -53,11 +53,11 @@
   <div class="col">
     <div class="card bg-ultra-dark text-light mb-3 shadow--lg" style="max-width: 540px;">
       <div class="position-relative">
-        <a href="oldal.html">
+        <a href="../mobiltortenelem.html#napjainkban">
           <img src="images/mobil2010.jpg" class="card-img card-image-hover" alt="...">
         </a>
         <div class="card-img-overlay">
-          <a href="oldal.html" class="stretched-link"></a>
+          <a href="../mobiltortenelem.html#napjainkban" class="stretched-link"></a>
         </div>
       </div>
       <div class="row no-gutters">
@@ -66,7 +66,7 @@
             <h5 class="card-title">2000-2020</h5>
             <p class="card-text">Napjainkban</p>
             <p class="card-text">
-              <a href="oldal.html" class="btn btn--accent">Tovább</a>
+              <a href="../mobiltortenelem.html#napjainkban" class="btn btn--accent">Tovább</a>
             </p>
           </div>
         </div>
