--- a/WebDev Projects/mobiltelefonok_peterteszary/mobiltortenelem.html
+++ b/WebDev Projects/mobiltelefonok_peterteszary/mobiltortenelem.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+      <link rel="stylesheet" href="../css/mobilstyle.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="../css/mobilstyle.css" />
+        <link rel="stylesheet" href="../css/mobilstyle.css" />
+  
     <title>iPhone 4s</title>
 
    
@@ -33,17 +34,17 @@
 <body class="bg-dark">
   <div class="container py-5">
     <h1 class="text-center mb-5">Korszakok</h1>
-    <table class="table table-dark">
-      <thead>
+    <table class="table shadow--lg text-light table-dark">
+      <thead >
         <tr>
-          <th>Időszak</th>
-          <th>Leírás</th>
+          <th class="h4 bg-ultra-dark">Időszak</th>
+          <th class="h4 bg-ultra-dark">Leírás</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>1940-1980</td>
-          <td>A kezdetek</td>
+          <td class="h3 bg-ultra-dark">1940-1980</td>
+          <td id="kezdetek" class="h3 bg-ultra-dark">A kezdetek</td>
         </tr>
         <tr>
           <td></td>
@@ -77,8 +78,8 @@
           </td>
         </tr>
         <tr>
-          <td>1980-2000</td>
-          <td>Az aranykor</td>
+          <td class="h3 bg-ultra-dark">1980-2000</td>
+          <td id="aranykor" class="h3 bg-ultra-dark">Az aranykor</td>
         </tr>
         <tr>
           <td></td>
@@ -107,8 +108,8 @@
         </td>
         </tr>
         <tr>
-          <td>2000-2020</td>
-          <td>Napjainkban</td>
+          <td class="h3 bg-ultra-dark">2000-2020</td>
+          <td id="napjainkban" class="h3 bg-ultra-dark">Napjainkban</td>
         </tr>
         <tr>
           <td></td>
