--- a/JavaScript Projects/tudasszintmero/tudasszintmero.html
+++ b/JavaScript Projects/tudasszintmero/tudasszintmero.html
@@ -37,7 +37,7 @@
       <!-- Személyes adatok bekérése vége -->
    
       <!-- Teszt -->
-      <div class="col-md-6">
+      <div class="col-md-6" id="testSection" style="display: none;">
         <form id="testForm">
           <fieldset class="mt-4">
             <legend>Teszt kitöltése</legend>
@@ -59,53 +59,52 @@
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="question1" id="question1Option4" value="Opera">
                   <label class="form-check-label" for="question1Option4">Opera</label>
-                  </div>
-                  </div>
-                  <div class="form-group">
-                  <label>2. kérdés: Melyik nyelv használható a weboldalak fejlesztéséhez?</label>
-                  <div class="form-check">
+                </div>
+              </div>
+              <div class="form-group">
+                <label>2. kérdés: Melyik nyelv használható a weboldalak fejlesztéséhez?</label>
+                <div class="form-check">
                   <input class="form-check-input" type="checkbox" name="question2" id="question2Option1" value="HTML">
                   <label class="form-check-label" for="question2Option1">HTML</label>
-                  </div>
-                  <div class="form-check">
+                </div>
+                <div class="form-check">
                   <input class="form-check-input" type="checkbox" name="question2" id="question2Option2" value="CSS">
                   <label class="form-check-label" for="question2Option2">CSS</label>
-                  </div>
-                  <div class="form-check">
+                </div>
+                <div class="form-check">
                   <input class="form-check-input" type="checkbox" name="question2" id="question2Option3" value="JavaScript">
                   <label class="form-check-label" for="question2Option3">JavaScript</label>
-                  </div>
-                  <div class="form-check">
+                </div>
+                <div class="form-check">
                   <input class="form-check-input" type="checkbox" name="question2" id="question2Option4" value="Python">
                   <label class="form-check-label" for="question2Option4">Python</label>
-                  </div>
-                  </div>
-                  <div class="form-group">
-                  <label>3. kérdés: Melyik programozási nyelv kiterjesztése a .js?</label>
-                  <input type="text" id="question3" class="form-control" required>
-                  </div>
-                  <div class="form-group">
-                  <label>4. kérdés: Milyen (3) fő kategóriába sorolják a fejlesztőket az eltöltött évek alapján?</label>
-                  <textarea id="question4" class="form-control" required></textarea>
-                  </div>
-                  <div class="form-group">
-                  <label>5. kérdés: Melyik HTML tag jelöli az oszlop vagyis <col> típusú és melyik a sor vagyis <row> típusú elemeket?</label>
-                  <p id="wordOrder"></p>
-                  <form id="answerForm">
+                </div>
+              </div>
+              <div class="form-group">
+                <label>3. kérdés: Melyik programozási nyelv kiterjesztése a .js?</label>
+                <input type="text" id="question3" class="form-control" required>
+              </div>
+              <div class="form-group">
+                <label>4. kérdés: Milyen (3) fő kategóriába sorolják a fejlesztőket az eltöltött évek alapján?</label>
+                <textarea id="question4" class="form-control" required></textarea>
+              </div>
+              <div class="form-group">
+                <label>5. kérdés: Melyik HTML tag jelöli az oszlop vagyis <col> típusú és melyik a sor vagyis <row> típusú elemeket?</label>
+                <p id="wordOrder"></p>
+                <form id="answerForm">
                   <input type="text" id="answerInput" required>
                   <input type="text" id="answerInputtwo" required>
-                  </form>
-                  </div>
-                  </div>
-                  </fieldset>
-                  </form>
-                  </div>
-                  <!-- Teszt vége -->
-                  </div>
-                  <button id="submitButton" class="btn btn-warning btn-primary mt-4" style="display: none;" type="submit">Ellenőriz</button>
-                  <div id="score" class="container mt-4"></div>
-                  
-                    </div>
-                    <script src="tudasszintmero.js"></script>
-                  </body>
-                  </html>
+                </form>
+              </div>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <!-- Teszt vége -->
+    </div>
+    <button id="submitButton" class="btn btn-warning btn-primary mt-4" style="display: none;" type="submit">Ellenőriz</button>
+    <div id="score" class="container mt-4"></div>
+  </div>
+  <script src="tudasszintmero.js"></script>
+</body>
+</html>
